--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,7 +39,7 @@
 @import 'components/services/offer';
 @import 'components/services/renewable';
 @import 'components/services/our_services';
-
+@import 'components/services/benefit';
 
 
 
