--- a/scss/components/services/_our_services.scss
+++ b/scss/components/services/_our_services.scss
@@ -28,17 +28,19 @@
 
         &__text{
             width: 100%;
+            margin-bottom: 30px;
 
             @media(min-width:1199px){
-                width: 70%;
+                width: 80%;
                 margin-right: 0;
+                margin-bottom: 0px;
             }
 
-            @media(min-width:1400px){
-                width: 70%;
+
+            @media(min-width:1900px){
+                width: 56%;
                 margin-right: 0;
             }
-
 
 
             h1{
@@ -79,30 +81,45 @@
         &__imagen{
             width: 100%;
             height: 100%;
+            padding: 0 15px;
 
-            @media(min-width: 1999px){
-                height: 100%;
+            @media(min-width: 1199px){
+                height: 700px;
+                padding: 0;
             }
+
         }
 
             
     }
 
      &__residencial{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        padding-top: 30px;
+        @include flex-center-center;
+        flex-direction: column-reverse;
         position: relative;
-        bottom: 40px;
+
+        @media(min-width: 1500px){
+            bottom: 40px;
+        }
 
         @media(min-width:1199px){
+            display: grid;
             grid-template-columns: repeat(2, 1fr);
+            padding-top: 0;
+            bottom: 30px;
         }
 
         &__text{
-            width: 70%;
-            margin-left: 0;
-            margin-top: auto;
-            margin-bottom: auto;
+            width: 100%;
+            margin-bottom: 30px;
+
+            @media(min-width:1199px){
+                margin-left: 0;
+                width: 70%;
+                margin-top: auto;
+                margin-bottom: auto;
+            }
 
             h1{
                 color: #1b8233;
@@ -142,21 +159,101 @@
         &__imagen{
             width: 100%;
             height: 100%;
+            padding: 0 15px;
 
             @media(min-width:1199px){
-                width: 100%;
                 margin-right: 0;
+                padding: 0;
             }
 
             @media(min-width:1400px){
-                width: 100%;
+                margin-right: 0;
+            }
+
+        }
+
+            
+    }
+
+    &__industria{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        position: relative;
+        padding-top: 30px;
+
+        @media(min-width:1199px){
+            grid-template-columns: repeat(2, 1fr);
+            bottom: 50px;
+            padding-top: 0;
+        }
+
+        @media(min-width: 1500px){
+            bottom: 80px;
+        }
+
+
+        &__text{
+            width: 100%;
+            margin-bottom: 30px;
+
+            @media(min-width:1199px){
+                width: 80%;
+                margin-right: 0;
+                margin-top: auto;
+                margin-bottom: auto;
+            }
+
+
+            @media(min-width:1900px){
+                width: 56%;
                 margin-right: 0;
             }
 
 
-            @media(min-width: 1999px){
-                height: 100%;
+            h1{
+                color: #1b8233;
+                font-weight: 900;
+                font-size: 20px;
+                margin-bottom: 15px;
+        
+                @media(min-width:768px){
+                    font-size: 30px;
+                    margin-bottom: 30px;
+                }
             }
+    
+            p{
+                color: $black;
+                font-weight: regular;
+                font-size: 17px;
+                line-height: 25px;
+
+                @media(min-width:768px){
+                    font-size: 24px;
+                    line-height: 30px;
+                }
+            }
+
+            h2{
+                font-size: 17px;
+                color: $black;
+                font-weight: bold;
+
+                @media(min-width:768px){
+                    font-size: 24px;
+                }
+            }
+        }
+
+        &__imagen{
+            width: 100%;
+            height: 100%;
+            padding: 0 15px;
+
+            @media(min-width: 1199px){
+                padding: 0;
+            }
+
         }
 
             
