--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -15,7 +15,7 @@
 	&__mobile {
 		width: 100%;
 		display: block;
-
+		background-color: rgba(0, 0, 0, 0.45);
 		@media(min-width: 1200px) {
 			display: none;
 		}
@@ -44,7 +44,7 @@
 				&__bar {
 					width: 100%;
 					height: 2px;
-					background-color: $la_salle_green;
+					background-color: $mikado_yellow;
 					position: relative;
 					transition: 0.3s;
 	
@@ -55,7 +55,7 @@
 						height: 100%;
 						top: -8px;
 						left: 0;
-						background-color: $la_salle_green;
+						background-color: $mikado_yellow;
 						transition: 0.3s;
 					}
 	
@@ -66,7 +66,7 @@
 						height: 100%;
 						bottom: -8px;
 						left: 0;
-						background-color: $la_salle_green;
+						background-color: $mikado_yellow;
 						transition: 0.3s;
 					}
 	
@@ -102,7 +102,7 @@
 		width: 100%;
 		height: 100%;
 		display: none; 
-	
+		/*background-color: rgba(0, 0, 0, 0.45);*/
 
 		@media(min-width: 1200px) {
 			display: block;
