--- a/scss/components/products/_panels.scss
+++ b/scss/components/products/_panels.scss
@@ -6,7 +6,7 @@
     padding: 15px 0 ;
 
     @media(min-width: 1199px){
-        padding: 0;
+        padding: 30px 0;
     }
 
     .container-sm{
@@ -20,17 +20,27 @@
 
 
     &__imagen{
+        width: 100%;
+
+        @media(min-width: 1199px){
+            width: 621px;
+        }
 
     }
 
     &__text{
         @include flex-center-center;
         flex-direction: column;
+        padding-top: 30px;
+        @media(min-width: 1199px){
+            padding-top: 0;
+        }
         h1{
             color: #1b8233;
             font-weight: 900;
             font-size: 20px;
             margin-bottom: 15px;
+            text-transform: uppercase;
     
             @media(min-width:768px){
                 font-size: 30px;
@@ -43,10 +53,12 @@
             font-weight: regular;
             font-size: 17px;
             line-height: 25px;
+            text-align: center;
 
             @media(min-width:768px){
                 font-size: 24px;
                 line-height: 30px;
+                text-align: start;
             }
         }
     }
