--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,6 +47,12 @@
 @import 'components/products/instalation';
 @import 'components/products/panels';
 
+//*distibuitor
+@import 'components/distibutor/hero';
+@import 'components/distibutor/distributor';
+@import 'components/distibutor/rason';
+@import 'components/distibutor/start_win';
+
 *{
 	margin: 0;
 	padding: 0;
