--- a/scss/components/distibutor/_distributor.scss
+++ b/scss/components/distibutor/_distributor.scss
@@ -1,5 +1,100 @@
 .distributor{
     width: 100%;
-    width: 100%;
+    height: 100%;
+    z-index: -1;
     position: relative;
+    background-color: $black;
+   /* background-image: url('../img/distributor/Banner-dis.jpg');*/
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    @media(min-width: 1199px){
+        padding: 200px 0 0 0 ;
+    }
+
+    .container{
+        width: 100%;
+        @include flex-center-center;
+        flex-direction: column;
+    }
+
+    &__title{
+        h1{
+            width: 100%;
+            font-weight: 600;
+            font-size: 30px;
+            color: $mikado_yellow;
+            text-shadow: 2px 2px 5px black;
+            text-align: start;
+            text-transform: uppercase;
+            padding-bottom: 20px;
+            margin: 0;
+            text-align: center;
+    
+            @media(min-width:768px){
+                font-size: 48px;
+            }
+        }
+
+        p{
+            font-size: 17px;
+            color: $white;
+            text-align: center;
+            font-weight: bold;
+            
+
+            @media(min-width: 1199px){
+                font-size: 24px;
+            }
+        }
+    }
+
+
+    &__carousel{
+
+    }
+
+    &__callAction{
+        
+        h2{
+            font-size: 17px;
+            color: $white;
+            text-align: center;
+            font-weight: bold;
+            
+
+            @media(min-width: 1199px){
+                font-size: 24px;
+            }
+        }
+
+        span{
+            color:$mikado_yellow ;
+        }
+
+
+        &__button{
+            @include flex-center-center;
+            background-color:$mikado_yellow ;
+            width: 100%;
+            /*Text*/
+            font-size: 14px;
+            font-weight: 800;
+            margin-top: 30px;
+            letter-spacing: 0.5px;
+            padding: 12px 23px;
+            color: $white;
+
+            @media(min-width:768px){
+                font-size: 30px;
+            }
+
+            &:hover{
+                color: $white;
+                background-color:$black ;
+                border: 1px solid $mikado_yellow;
+            }
+        }
+    }
 }
