--- a/scss/components/distibutor/_rason.scss
+++ b/scss/components/distibutor/_rason.scss
@@ -32,29 +32,55 @@
 
     &__target{
         width: 100%;
-        height: 300px;
+        height: 100%;
         background-color: $mikado_yellow;
         padding: 15px;
 
+        @media(min-width: 1199px){
+            height: 300px;
+        }
+
         h1{
             text-align: center;
+            padding-bottom: 30px;
+
+            @media(min-width: 992px){
+                padding-bottom: 0;
+            }
         }
 
         &__grid{
             position: relative;
-            top: 50px;
+            top: 0;
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(1, 1fr);
+            gap: 30px;
+
+            @media(min-width: 1199px){
+                grid-template-columns: repeat(3, 1fr);
+                top: 50px;
+                gap: 50px;
+            }
 
             &__item{
-                margin: auto;
-                position: relative;
+            @include flex-a-center;
+            flex-direction: column;
+            position: relative;
 
                 &__imagen{
-                    width: 321px;
+                    width: 100%;
+                    padding-bottom: 20px;
+
+                    @media(min-width: 400px){
+                        width: 321px;
+                    }
 
                     @media(min-width: 1199px){
-                        padding-bottom: 24px;
+                        width: 100%;
+                    }
+
+                    @media(min-width: 1400px){
+                        width: 321px;
                     }
 
                     img{
@@ -65,10 +91,13 @@
 
                 p{
                     font-size: 17px;
-                    color: $white;
+                    color: $black;
                     text-align: center;
                     font-weight: bold;
                     
+                    @media(min-width: 1199px){
+                        color: $white;
+                    }
 
                     @media(min-width: 1199px){
                         font-size: 24px;
