--- a/scss/components/distibutor/_distributor.scss
+++ b/scss/components/distibutor/_distributor.scss
@@ -1,8 +1,8 @@
 .distributor{
     width: 100%;
     height: 100%;
-    z-index: -1;
     position: relative;
+    /*z-index: -1;*/
     background-color: $black;
    /* background-image: url('../img/distributor/Banner-dis.jpg');*/
     background-position: center;
@@ -20,6 +20,7 @@
     }
 
     &__title{
+
         h1{
             width: 100%;
             font-weight: 600;
@@ -52,6 +53,50 @@
 
 
     &__carousel{
+        overflow: hidden;
+
+        &__slide{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 50px;
+
+            &__imgen{
+
+            }
+
+
+            &__text{
+                width: 70%;
+                margin: auto;
+                h1{
+                    width: 100%;
+                    font-weight: 600;
+                    font-size: 30px;
+                    color: $white;
+                    text-shadow: 2px 2px 5px black;
+                    text-align: start;
+                    padding-bottom: 20px;
+                    margin: 0;
+            
+                    @media(min-width:768px){
+                        font-size: 48px;
+                    }
+                }
+
+                p{
+                    font-size: 17px;
+                    color: $black;
+
+                    @media(min-width: 1199px){
+                        color: $white;
+                    }
+
+                    @media(min-width: 1199px){
+                        font-size: 24px;
+                    }
+                }
+            }
+        }
 
     }
 
@@ -102,4 +147,41 @@
             }
         }
     }
+}
+
+.swiper_distribuitor {
+	width: 100%;
+	height: 100%;
+
+		.swiper-slide{
+			width: 100% !important;
+			height: 100%;
+
+		}
+
+        .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+            position: relative;
+            padding: 50px 0;
+            width: 100%;
+            margin: auto;
+            @media(min-width:1199px){
+                width: 50%;
+            }
+        }
+
+        .swiper-pagination-bullet{
+            width: 50px;
+            height: 4px;
+            border-radius: 0;
+            background-color: $white;
+            opacity: 1;
+        }
+
+        .swiper-pagination-bullet-active {
+            border-radius: none;
+            background-color: $mikado_yellow;
+            border: 1px solid $mikado_yellow;
+            
+        }
+
 }
