--- a/css/main.css
+++ b/css/main.css
@@ -2252,7 +2252,8 @@
   width: 100%;
   position: relative;
   background-color: #000000;
-  padding: 30px 0; }
+  padding: 30px 0;
+  z-index: 99; }
   @media (min-width: 1199px) {
     .rason {
       padding: 90px 0; } }
