--- a/scss/components/distibutor/_rason.scss
+++ b/scss/components/distibutor/_rason.scss
@@ -4,6 +4,7 @@
     position: relative;
     background-color: $black;
     padding: 30px 0;
+    z-index: 99;
 
     @media(min-width:1199px){
         padding: 90px 0;
