--- a/scss/components/distibutor/_distributor.scss
+++ b/scss/components/distibutor/_distributor.scss
@@ -2,15 +2,15 @@
     width: 100%;
     height: 100%;
     position: relative;
-    /*z-index: -1;*/
     background-color: $black;
    /* background-image: url('../img/distributor/Banner-dis.jpg');*/
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    padding: 30px 0;
 
     @media(min-width: 1199px){
-        padding: 200px 0 0 0 ;
+        padding: 200px 0 60px 0 ;
     }
 
     .container{
@@ -24,7 +24,7 @@
         h1{
             width: 100%;
             font-weight: 600;
-            font-size: 30px;
+            font-size: 25px;
             color: $mikado_yellow;
             text-shadow: 2px 2px 5px black;
             text-align: start;
@@ -56,12 +56,25 @@
         overflow: hidden;
 
         &__slide{
+            padding-top: 60px;
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 50px;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 30px;
 
-            &__imgen{
+            @media(min-width: 1199px){
+                grid-template-columns: repeat(2, 1fr);
+                gap: 0;
+            }
 
+            &__imagen{
+                width: 80%;
+                margin: auto;
+
+                @media(min-width: 1199px){
+                    grid-template-columns: repeat(2, 1fr);
+                    margin: 0 0 0 auto;
+                }
+    
             }
 
 
@@ -71,7 +84,7 @@
                 h1{
                     width: 100%;
                     font-weight: 600;
-                    font-size: 30px;
+                    font-size: 25px;
                     color: $white;
                     text-shadow: 2px 2px 5px black;
                     text-align: start;
@@ -85,11 +98,7 @@
 
                 p{
                     font-size: 17px;
-                    color: $black;
-
-                    @media(min-width: 1199px){
-                        color: $white;
-                    }
+                    color: $white;
 
                     @media(min-width: 1199px){
                         font-size: 24px;
@@ -125,18 +134,18 @@
             /*Text*/
             font-size: 14px;
             font-weight: 800;
-            margin-top: 30px;
             letter-spacing: 0.5px;
             padding: 12px 23px;
             color: $white;
+            width: 100%;
+            margin:30px auto 0 auto;
+
+            @media(min-width:350px){
+                width: 300px;
+            }
             
             @media(min-width:768px){
                 font-size: 30px;
-                margin: auto;
-            }
-
-
-            @media(min-width:1199px){
                 width: 500px;
             }
 
@@ -164,6 +173,8 @@
             padding: 50px 0;
             width: 100%;
             margin: auto;
+            bottom: 0;
+            
             @media(min-width:1199px){
                 width: 50%;
             }
