--- a/scss/components/products/_panels.scss
+++ b/scss/components/products/_panels.scss
@@ -12,9 +12,11 @@
     .container-sm{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
 
         @media(min-width: 1199px){
             grid-template-columns: repeat(2, 1fr);
+            gap: 0;
         }
     }
 
@@ -38,9 +40,10 @@
         h1{
             color: #1b8233;
             font-weight: 900;
-            font-size: 20px;
+            font-size: 25px;
             margin-bottom: 15px;
             text-transform: uppercase;
+            text-align: center;
     
             @media(min-width:768px){
                 font-size: 30px;
@@ -58,7 +61,6 @@
             @media(min-width:768px){
                 font-size: 24px;
                 line-height: 30px;
-                text-align: start;
             }
         }
     }
