--- a/css/main.css
+++ b/css/main.css
@@ -2177,7 +2177,9 @@
         @media (min-width: 1199px) {
           .distributor__carousel__slide__imagen {
             grid-template-columns: repeat(2, 1fr);
-            margin: 0 0 0 auto; } }
+            margin: 0 0 0 auto;
+            width: 100%;
+            height: 700px; } }
       .distributor__carousel__slide__text {
         width: 70%;
         margin: auto; }
