--- a/scss/components/distibutor/_distributor.scss
+++ b/scss/components/distibutor/_distributor.scss
@@ -73,6 +73,8 @@
                 @media(min-width: 1199px){
                     grid-template-columns: repeat(2, 1fr);
                     margin: 0 0 0 auto;
+                    width: 100%;
+                    height: 700px;
                 }
     
             }
