--- a/css/main.css
+++ b/css/main.css
@@ -2124,7 +2124,7 @@
   height: 100%;
   position: relative;
   background-color: #000000;
-  /* background-image: url('../img/distributor/Banner-dis.jpg');*/
+  background-image: url("../img/distributor/Fondo-slide.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -2187,7 +2187,7 @@
           width: 100%;
           font-weight: 600;
           font-size: 25px;
-          color: #FFFFFF;
+          color: #F7C50A;
           text-shadow: 2px 2px 5px black;
           text-align: start;
           padding-bottom: 20px;
