--- a/scss/components/distibutor/_distributor.scss
+++ b/scss/components/distibutor/_distributor.scss
@@ -3,7 +3,7 @@
     height: 100%;
     position: relative;
     background-color: $black;
-   /* background-image: url('../img/distributor/Banner-dis.jpg');*/
+    background-image: url('../img/distributor/Fondo-slide.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -87,7 +87,7 @@
                     width: 100%;
                     font-weight: 600;
                     font-size: 25px;
-                    color: $white;
+                    color: $mikado_yellow;
                     text-shadow: 2px 2px 5px black;
                     text-align: start;
                     padding-bottom: 20px;
