--- a/css/main.css
+++ b/css/main.css
@@ -2124,7 +2124,7 @@
   height: 100%;
   position: relative;
   background-color: #000000;
-  background-image: url("../img/distributor/Fondo-slide.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/distributor/Fondo-slide.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
