--- a/scss/components/distibutor/_distributor.scss
+++ b/scss/components/distibutor/_distributor.scss
@@ -3,7 +3,7 @@
     height: 100%;
     position: relative;
     background-color: $black;
-    background-image: url('../img/distributor/Fondo-slide.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('../img/distributor/Fondo-slide.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
